--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
+min_version = 4.0
 env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51,52}
+no_package = true
 requires =
-    tox >= 4
+    tox-gh-actions ~= 3.1
 
 [gh-actions]
 python =
@@ -17,14 +19,11 @@ deps =
     typing_extensions == 4.11.0
     cssselect == 1.2.0
 
-[stub_test_dep]
-deps =
-    {[common_dep]deps}
-    mypy == 1.9.0
-    pytest-mypy-plugins == 3.1.2
-
 [testenv:py{38,39,310,311,312}-stub]
-deps = {[stub_test_dep]deps}
+deps =
+    {[testenv:mypy]deps}
+    pytest-mypy-plugins == 3.1.2
+    .  # At whose temple should I aim and shoot?
 commands =
     pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
@@ -35,10 +34,10 @@ deps =
     pytest == 8.1.1
     html5lib == 1.1
     beautifulsoup4 == 4.12.3
-    py{310,311,312}-rt-lxml49: lxml == 4.9.4
-    py{310,311,312}-rt-lxml50: lxml == 5.0.2
-    py{310,311,312}-rt-lxml51: lxml == 5.1.1
-    py{310,311,312}-rt-lxml52: lxml == 5.2.1
+    py{310,311,312}-rt-lxml49: lxml == 4.9.*
+    py{310,311,312}-rt-lxml50: lxml == 5.0.*
+    py{310,311,312}-rt-lxml51: lxml == 5.1.*
+    py{310,311,312}-rt-lxml52: lxml == 5.2.*
 setenv =
     PYTHONUTF8 = 1
 commands =
@@ -50,14 +49,14 @@ deps =
     {[common_dep]deps}
     mypy == 1.9.0
 package = skip
-commands = mypy {posargs:lxml-stubs}
+commands = mypy {posargs:} lxml-stubs
 
 [testenv:pyright]
 deps =
     {[common_dep]deps}
-    pyright == 1.1.358
+    pyright == 1.1.364
 package = skip
-commands = pyright {posargs:lxml-stubs}
+commands = pyright {posargs:}
 
 [testenv:build]
 passenv =
