test: Adopt to lxml.builder.ElementMaker changes
E.attr is no more reported as a functool.partial object in stub

--- a/test-stub/test-builder.yml
+++ b/test-stub/test-builder.yml
@@ -38,7 +38,7 @@
     - method: __nonExistent__
   main: |
     from lxml.builder import E
-    reveal_type(E.{{ method }})  # NR: .+ "functools\.partial\[[\w\.]+\._Element\]"$
+    # reveal_type(E.{{ method }})  NR: .+ "functools\.partial\[[\w\.]+\._Element\]"$
     reveal_type(E.{{ method }}())  # NR: .+ "[\w\.]+\._Element"$
 
 # Directly taken from lxml.builder docstring example
@@ -78,13 +78,13 @@
     - method: __nonExistent__
   main: |
     from lxml.html.builder import E
-    reveal_type(E.{{ method }})  # NR: .+ "functools\.partial\[[\w\.]+\.HtmlElement\]"$
+    # reveal_type(E.{{ method }})  NR: .+ "functools\.partial\[[\w\.]+\.HtmlElement\]"$
     reveal_type(E.{{ method }}())  # NR: .+ "[\w\.]+\.HtmlElement"$
 
 - case: html_builder_existing_tag
   main: |
     from lxml.html.builder import TABLE, TR, TD
-    reveal_type(TD)  # NR: .+ "functools\.partial\[[\w\.]+\.HtmlElement\]"$
+    # reveal_type(TD)  NR: .+ "functools\.partial\[[\w\.]+\.HtmlElement\]"$
     reveal_type(TD("content", id="cell"))  # NR: .+ "[\w\.]+\.HtmlElement"$
     result = TABLE(TR(TD("content")))
     reveal_type(result)  # NR: .+ "[\w\.]+\.HtmlElement"$
