--- a/tox.ini
+++ b/tox.ini
@@ -58,10 +58,24 @@ deps =
 package = skip
 commands = pyright {posargs:}
 
-[testenv:build]
+[testenv:build-normal]
 passenv =
     PDM_BUILD_SCM_VERSION
 deps =
     build
 package = skip
 commands = python -m build {posargs}
+
+[testenv:build-alt]
+passenv =
+    PDM_BUILD_SCM_VERSION
+deps =
+    build
+package = skip
+allowlist_externals =
+    git
+commands =
+    git apply multi-subclass.patch
+    python -m build {posargs}
+    git apply -R multi-subclass.patch
+
