--- a/.github/workflows/build_inc.yml
+++ b/.github/workflows/build_inc.yml
@@ -14,11 +14,10 @@ jobs:
   build:
     strategy:
       matrix:
-        pyver:
-          - "3.10"
-        os:
-          - "ubuntu-22.04"
-    runs-on: ${{ matrix.os }}
+        flavor:
+          - "normal"
+          - "alt"
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
       with:
@@ -27,22 +26,53 @@ jobs:
 
     - uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.pyver }}
-        cache: 'pip'
+        python-version: "3.10"
+        cache: "pip"
 
     - name: Install tox
       run: pip install --progress-bar=off tox
 
-    - name: Type checker validation on source
-      run: tox run-parallel --parallel-no-spinner -v -e mypy,pyright
+    - name: Build flavor ${{ matrix.flavor }}
+      run: tox run -v -e build-${{ matrix.flavor }}
 
-    - name: Build sdist and wheel
-      run: tox run -v -e build
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4
       with:
-        name: dist
+        name: dist-${{ matrix.flavor }}
         path: dist/*
         if-no-files-found: error
+
+  checksrc:
+    needs: build
+    strategy:
+      matrix:
+        flavor:
+          - "normal"
+          - "alt"
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: dist-${{ matrix.flavor }}
+        path: dist
+
+    - name: Extract tarball
+      shell: bash
+      run: >
+        tar -zxf dist/*.tar.gz --strip-components=1
+
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+        cache: "pip"
+
+    - name: Install prerequisites
+      run: >
+        pip install --progress-bar=off -v
+        "tox-gh-actions == 3.2.0"
+
+    - name: Run type checker on source
+      run: >
+        tox run-parallel -v
+        --parallel-no-spinner
+        -e mypy,pyright
 
