build: Bump typeguard dep conditionally

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ test = [
     'tox ~= 4.0',
     'mypy >= 1.9, < 1.11',
     'pyright >= 1.1.289',
-    'typeguard >= 3.0, < 5',
+    'typeguard >= 3.0; python_full_version < "3.12.4"',
+    'typeguard >= 4.3.0; python_full_version >= "3.12.4"',
     'pytest >= 7.0, < 9',
     'html5lib == 1.1',
     'pytest-mypy-plugins >= 2.0',
