--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ homepage = 'https://github.com/abelcheung/types-lxml'
 [project.optional-dependencies]
 test = [
     'tox ~= 4.0',
-    'mypy >= 1.9, < 1.11',
+    'mypy ~= 1.11.0',
     'pyright >= 1.1.289',
     'typeguard >= 3.0; python_full_version < "3.12.4"',
     'typeguard >= 4.3.0; python_full_version >= "3.12.4"',
