test: Perform runtime tests against lxml 5.3 too

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 min_version = 4.0
-env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51,52}
+env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51,52,53}
 no_package = true
 requires =
     tox-gh-actions ~= 3.1
@@ -27,7 +27,7 @@ deps =
 commands =
     pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
-[testenv:py{310,311,312}-rt-lxml{49,50,51,52}]
+[testenv:py{310,311,312}-rt-lxml{49,50,51,52,53}]
 deps =
     {[testenv:pyright]deps}
     typeguard == 4.3.0
@@ -38,6 +38,7 @@ deps =
     py{310,311,312}-rt-lxml50: lxml == 5.0.*
     py{310,311,312}-rt-lxml51: lxml == 5.1.*
     py{310,311,312}-rt-lxml52: lxml == 5.2.*
+    py{310,311,312}-rt-lxml53: lxml == 5.3.*
 setenv =
     PYTHONUTF8 = 1
 commands =
