ci: Sign automatic formatting PRs as bot

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -47,7 +47,7 @@ jobs:
           title: 'Automatic formatting changes'
           commit-message: 'style: automated formatting'
           labels: bot
-          author: 'github-action[bot] <41898282+github-actions[bot]@users.noreply.github.com>'
+          sign-commits: true
           body: >
             Automated formatting by
             [ruff-action](https://github.com/ChartBoost/ruff-action) and
