--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -20,6 +20,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
+          - "3.13-dev"
         os:
           - "ubuntu-22.04"
     runs-on: ${{ matrix.os }}
@@ -64,6 +65,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
+          - "3.13-dev"
         os:
           - ubuntu-22.04
           - windows-2022
