--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 min_version = 4.0
-env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51,52,53}
+env_list = py{38,39,310,311,312,313}-stub, py{310,311,312}-rt-lxml{49,50,51,52,53}, py313-rt-lxml53
 no_package = true
 requires =
     tox-gh-actions ~= 3.1
@@ -12,6 +12,7 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
 
 [common_dep]
 deps =
@@ -19,7 +20,7 @@ deps =
     typing_extensions == 4.12.0
     cssselect == 1.2.0
 
-[testenv:py{38,39,310,311,312}-stub]
+[testenv:py{38,39,310,311,312,313}-stub]
 deps =
     {[testenv:mypy]deps}
     pytest-mypy-plugins == 3.1.2
@@ -27,7 +28,7 @@ deps =
 commands =
     pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
-[testenv:py{310,311,312}-rt-lxml{49,50,51,52,53}]
+[testenv:py{310,311,312}-rt-lxml{49,50,51,52,53},py313-rt-lxml53]
 deps =
     {[testenv:pyright]deps}
     typeguard == 4.3.0
@@ -38,7 +39,7 @@ deps =
     py{310,311,312}-rt-lxml50: lxml == 5.0.*
     py{310,311,312}-rt-lxml51: lxml == 5.1.*
     py{310,311,312}-rt-lxml52: lxml == 5.2.*
-    py{310,311,312}-rt-lxml53: lxml == 5.3.*
+    py{310,311,312,313}-rt-lxml53: lxml == 5.3.*
 setenv =
     PYTHONUTF8 = 1
 commands =
