feat(test): Add mypy adapter for runtime tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 min_version = 4.0
 env_list = py{38,39,310,311,312,313}-stub, py{310,311,312}-rt-lxml{49,50,51,52,53}, py313-rt-lxml53
-no_package = true
 requires =
     tox-gh-actions ~= 3.1
 
@@ -31,6 +30,7 @@ commands =
 [testenv:py{310,311,312}-rt-lxml{49,50,51,52,53},py313-rt-lxml53]
 deps =
     {[testenv:pyright]deps}
+    {[testenv:mypy]deps}
     typeguard == 4.3.0
     pytest == 8.3.2
     html5lib == 1.1
@@ -42,14 +42,22 @@ deps =
     py{310,311,312,313}-rt-lxml53: lxml == 5.3.*
 setenv =
     PYTHONUTF8 = 1
+package = editable
+change_dir = {tox_root}/test-rt
+# Mypy command line doesn't know how to dump to file or
+# discard output, and tox doesn't support shell
+# semantics, that's why we resort to mypy.api
+# Besides, mypy exit code becomes 1 unconditionally when
+# JSON output is desired, so just test text output
 commands =
-    pyright --level error test-rt
-    pytest {posargs:test-rt}
+    pyright --level error
+    python -c 'from mypy.api import run;r=run(["--config-file=rttest-mypy.ini","."]);exit(r[2])'
+    pytest {posargs:}
 
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy == 1.11.1
+    mypy == 1.11.2
 package = skip
 commands = mypy {posargs:} lxml-stubs
 
