--- a/test-rt/rttest-mypy.ini
+++ b/test-rt/rttest-mypy.ini
@@ -1,4 +1,8 @@
 [mypy]
 explicit_package_bases = True
 strict = True
+pretty = False
 always_false = TYPECHECKER_ASSIGNMENT_OK,TYPECHECKER_RETURNNONE_OK,INJECT_REVEAL_TYPE
+# Useless, mypy just appends an error, all vars are still
+# dumped as typing.Any anyway
+# disallow_any_unimported = True
