refactor(test): Type checker adapters become classes
Nothing changed in runtime perspective, just that module level access caused bigger challenge in typing

--- a/test-rt/rttest-mypy.ini
+++ b/test-rt/rttest-mypy.ini
@@ -2,6 +2,7 @@
 explicit_package_bases = True
 strict = True
 pretty = False
+warn_redundant_casts = False
 
 # Useless, mypy just appends an error, all vars are still
 # dumped as typing.Any anyway
