build(tox): Fix typo in posargs

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ passenv =
 deps =
     build
 package = skip
-commands = python -m build {posargs}
+commands = python -m build {posargs:}
 
 [testenv:build-alt]
 passenv =
@@ -86,6 +86,6 @@ allowlist_externals =
     git
 commands =
     git apply multi-subclass.patch
-    python -m build {posargs}
+    python -m build {posargs:}
     git apply -R multi-subclass.patch
 
