--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ extra_standard_library = [
 
 [tool.pyright]
 include = ['lxml-stubs']
+extraPaths = ['test-rt']
 typeCheckingMode = 'strict'
 reportPrivateUsage = false
 reportUnnecessaryTypeIgnoreComment = 'error'
