test: Remove obsolete mypy deficiency tests

--- a/test-rt/rttest-mypy.ini
+++ b/test-rt/rttest-mypy.ini
@@ -17,6 +17,11 @@ warn_redundant_casts = False
 # certain attribute assignments, and outputs a single
 # type. Mypy slams door upon such assignments, where
 # input and output type for attribute are unidentical.
+# See python/mypy#3004 for further discussion (since 2017).
+# Earlier days mypy emits error directly when checking
+# annotation files, now they pretend no error exists in
+# annotation, yet becomes fatal whenever one uses such
+# pattern in real python code.
 #
 # -- TC_CAN_RETURN_NONE
 # Mypy bans assigning result to func that doesn't return value.
