--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,15 @@ classifiers = [
 [project.urls]
 homepage = 'https://github.com/abelcheung/types-lxml'
 
+# Although mypy 1.10 itself produce no problem in stub,
+# it is basically unusable for real life code that uses lxml,
+# not until following improvement is done in 1.11.
+# https://mypy.readthedocs.io/en/stable/changelog.html#type-inference-improvements
+
 [project.optional-dependencies]
 test = [
     'tox ~= 4.0',
-    'mypy ~= 1.11.0',
+    'mypy ~= 1.11',
     'pyright >= 1.1.351',
     'typeguard >= 3.0; python_full_version < "3.12.4"',
     'typeguard >= 4.3.0; python_full_version >= "3.12.4"',
@@ -99,6 +104,7 @@ packages = 'lxml-stubs'
 strict = true
 show_error_context = true
 pretty = true
+warn_unused_ignores = false
 
 [tool.ruff]
 target-version = "py312"
