--- a/tox.ini
+++ b/tox.ini
@@ -27,10 +27,16 @@ deps =
 commands =
     pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
+# Although mypy 1.10 itself produce no problem in stub,
+# it is basically unusable for real life code that uses lxml,
+# not until following improvement is done in 1.11.
+# https://mypy.readthedocs.io/en/stable/changelog.html#type-inference-improvements
+# So runtime test requires 1.11 instead
+
 [testenv:py{310,311,312}-rt-lxml{49,50,51,52,53},py313-rt-lxml53]
 deps =
     {[testenv:pyright]deps}
-    {[testenv:mypy]deps}
+    mypy == 1.11.2
     typeguard == 4.3.0
     pytest == 8.3.3
     html5lib == 1.1
@@ -57,7 +63,7 @@ commands =
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy == 1.12.0
+    mypy == 1.10.1
 package = skip
 commands = mypy {posargs:} lxml-stubs
 
