fix: Mostly undo mypy 1.10 changes
Mypy 1.10 isn't working great even in stub tests. Partially revert f565104a11d6226cdd3ec620c6711525cc1f0d24

--- a/tox.ini
+++ b/tox.ini
@@ -27,16 +27,10 @@ deps =
 commands =
     pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
-# Although mypy 1.10 itself produce no problem in stub,
-# it is basically unusable for real life code that uses lxml,
-# not until following improvement is done in 1.11.
-# https://mypy.readthedocs.io/en/stable/changelog.html#type-inference-improvements
-# So runtime test requires 1.11 instead
-
 [testenv:py{310,311,312}-rt-lxml{49,50,51,52,53},py313-rt-lxml53]
 deps =
     {[testenv:pyright]deps}
-    mypy == 1.11.2
+    {[testenv:mypy]deps}
     typeguard == 4.3.0
     pytest == 8.3.3
     html5lib == 1.1
@@ -63,7 +57,7 @@ commands =
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy == 1.10.1
+    mypy == 1.11.2
 package = skip
 commands = mypy {posargs:} lxml-stubs
 
