--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,13 +21,21 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: '3.10'
+        cache: 'pip'
 
-    - name: Install dependencies
-      run: pip install --progress-bar=off -r requirements.txt
+    - uses: astral-sh/setup-uv@v3
+      with:
+        version: '0.4.27'
+        enable-cache: true
+        cache-dependency-glob: |
+          **/pyproject.toml
+
+    - name: Install requirements
+      run: |
+        uv pip install -r pyproject.toml
 
     - name: Mypy review
       id: mypy
